--- a/kitchen.html
+++ b/kitchen.html
@@ -71,6 +71,38 @@
         </div>
     </div>
 
+    <div class="open-recipe-book-container">
+        <div class="open-recipe-book">
+            <div class="left-page">
+                <div class="left-page-header">
+                    <div class="left-page-header-title"><p>Naiads Aquatic Aura Brew</p></div>
+                    <div class="left-page-header-img"></div>
+                </div>
+                <div class="left-page-content">
+                    <div class="left-page-stat"><span class="circle"></span><p class="stat-text">+ 10 Dexterity</p></div>
+                    <div class="left-page-stat"><span class="circle"></span><p class="stat-text">+ 100 Agility</p></div>
+                    <div class="left-page-stat"><span class="circle"></span><p class="stat-text">- 10 Damage</p></div>
+                </div>
+            </div>
+            <div class="right-page">
+                <div class="right-page-header">
+                    <div class="right-page-header-title">Recipe:</div>
+                </div>
+                <div class="right-page-content">
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text">Eye of Newt</p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text">Pheonix Feather</p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text">Serpent Scales</p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text">Basilisk Venom</p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text">Ancient Celestial Sand</p></div>
+                </div>
+            </div>
+        </div>
+        <div class="page-btns-container">
+            <div class="previous"><--</div>
+            <div class="next"><--</div>
+        </div>    
+    </div>
+
     <script src="assets/js/kitchen.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
