--- a/game.html
+++ b/game.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/game.css">
   <title>Game Board</title>
 </head>
 
 <body>
   <section>
-    <nav id="game-board-navbar" class="navbar w-100">
+    <!-- <nav id="game-board-navbar" class="navbar w-100">
       <div class="row w-100">
         <div class="col-4 d-flex align-items-center justify-content-center">
           <a href="index.html">Main Menu</a>
@@ -28,21 +28,27 @@
           </div>
         </div>
       </div>
-    </nav>
+    </nav> -->
     <!-- Players and inventory -->
     <div class="row row-cols-1" id="game-board">
 
       <!-- Enemy Card -->
       <div class="col-4">
-        <div class="card h-100 enemy-card">
+        <div class="card h-100">
           <div class="card-body">
             <h5 class="card-title text-center">Enemy-Name</h5>
-            <img src="assets/images/enemies/grim-reaper.png" class="card-img-top" alt="grim-reaper">
+            <img src="assets/images/enemies/Tiny_Vampire-removebg-preview.png" class="card-img-top" alt="tiny-vampire">
           </div>
           <div class="card-footer bg-transparent">
             <!-- Enemy Stats -->
             <div class="row enemy-stats-section">
               <div class="col">
+                <div class="progress">
+                  <div id="player-hp" class="progress-bar bg-warning" role="progressbar" aria-valuenow="85"
+                    aria-valuemin="0" aria-valuemax="100" style="width: 85%">
+                    <span class="text-left pl-2 progress-item">HP</span>
+                  </div>
+                </div>
                 <div class="progress">
                   <div id="enemy-strength" class="progress-bar bg-danger" role="progressbar" aria-valuenow="50"
                     aria-valuemin="0" aria-valuemax="100" style="width: 50%">
@@ -69,48 +75,22 @@
       </div>
       <!-- ./enemy card -->
 
-      <!-- Potions and Ingredients -->
-      <div class="col-4">
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="potions-tab" data-bs-toggle="tab" data-bs-target="#inventory-potions"
-              type="button" role="tab" aria-controls="inventory-potions" aria-selected="true">
-              Potions
-            </button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="ingredients-tab" data-bs-toggle="tab" data-bs-target="#inventory-ingredients"
-              type="button" role="tab" aria-controls="inventory-ingredients" aria-selected="false">
-              Ingredients
-            </button>
-          </li>
-        </ul>
-        <div class="tab-content" id="myTabContent">
-
-          <!-- Potions Tab -->
-          <div class="tab-pane fade show active" id="inventory-potions" role="tabpanel" aria-labelledby="potions-tab"
-            tabindex="0">
-            <!-- potion grid using js -->
-          </div>
-          <!-- ./potions tab -->
-
-          <!-- Ingredients Tab -->
-          <div class="tab-pane fade" id="inventory-ingredients" role="tabpanel" aria-labelledby="ingredients-tab"
-            tabindex="0">
-            <!-- ingredient grid using js -->
-          </div>
-          <!-- ./ingredients tab -->
-
-        </div>
+      <!-- Cauldron -->
+      <!-- <div class="col"> -->
+      <div class="cauldron">
+        <img src="assets/images/general/cauldron_brew.gif" alt="Cauldron" class="cauldron-card">
       </div>
-      <!-- ./potions and ingredients -->
+      <!-- </div> -->
+      <!-- ./cauldron -->
+
+
 
       <!-- Player Card -->
       <div class="col-4">
-        <div class="card h-100 player-card">
+        <div class="card h-100">
           <div class="card-body">
             <h5 class="card-title text-center">Player-Name</h5>
-            <img src="assets/images/player/wizard.jpeg" class="card-img-top" alt="grim-reaper">
+            <img src="assets/images/player/player-removebg-preview.png" class="card-img-top" alt="grim-reaper">
           </div>
           <div class="card-footer bg-transparent">
             <!-- Player Stats -->
@@ -151,13 +131,42 @@
     </div>
     <div class="row text-center">
 
-      <!-- Cauldron -->
-      <div class="col">
-        <div id="cauldron">
-          <img src="assets/images/general/cauldron_brew.gif" alt="Cauldron">
+      <!-- Potions and Ingredients -->
+      <div class="col-4">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="potions-tab" data-bs-toggle="tab" data-bs-target="#inventory-potions"
+              type="button" role="tab" aria-controls="inventory-potions" aria-selected="true">
+              Potions
+            </button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="ingredients-tab" data-bs-toggle="tab" data-bs-target="#inventory-ingredients"
+              type="button" role="tab" aria-controls="inventory-ingredients" aria-selected="false">
+              Ingredients
+            </button>
+          </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+
+          <!-- Potions Tab -->
+          <div class="tab-pane fade show active" id="inventory-potions" role="tabpanel" aria-labelledby="potions-tab"
+            tabindex="0">
+            <!-- potion grid using js -->
+          </div>
+          <!-- ./potions tab -->
+
+          <!-- Ingredients Tab -->
+          <div class="tab-pane fade" id="inventory-ingredients" role="tabpanel" aria-labelledby="ingredients-tab"
+            tabindex="0">
+            <!-- ingredient grid using js -->
+          </div>
+          <!-- ./ingredients tab -->
+
         </div>
       </div>
-      <!-- ./cauldron -->
+      <!-- ./potions and ingredients -->
+
 
     </div>
   </section>
