--- a/game.html
+++ b/game.html
@@ -75,22 +75,14 @@
       </div>
       <!-- ./enemy card -->
 
-      <!-- Cauldron -->
-      <!-- <div class="col"> -->
-      <div class="cauldron">
-        <img src="assets/images/general/cauldron_brew.gif" alt="Cauldron" class="cauldron-card">
-      </div>
-      <!-- </div> -->
-      <!-- ./cauldron -->
-
-
-
       <!-- Player Card -->
       <div class="col-4">
         <div class="card h-100">
           <div class="card-body">
             <h5 class="card-title text-center">Player-Name</h5>
-            <img src="assets/images/player/player-removebg-preview.png" class="card-img-top" alt="grim-reaper">
+            <div class="player">
+              <img src="assets/images/player/player-removebg-preview.png" class="card-img-top" alt="grim-reaper">
+            </div>
           </div>
           <div class="card-footer bg-transparent">
             <!-- Player Stats -->
@@ -129,45 +121,12 @@
       <!-- ./player card -->
 
     </div>
-    <div class="row text-center">
-
-      <!-- Potions and Ingredients -->
-      <div class="col-4">
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="potions-tab" data-bs-toggle="tab" data-bs-target="#inventory-potions"
-              type="button" role="tab" aria-controls="inventory-potions" aria-selected="true">
-              Potions
-            </button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="ingredients-tab" data-bs-toggle="tab" data-bs-target="#inventory-ingredients"
-              type="button" role="tab" aria-controls="inventory-ingredients" aria-selected="false">
-              Ingredients
-            </button>
-          </li>
-        </ul>
-        <div class="tab-content" id="myTabContent">
-
-          <!-- Potions Tab -->
-          <div class="tab-pane fade show active" id="inventory-potions" role="tabpanel" aria-labelledby="potions-tab"
-            tabindex="0">
-            <!-- potion grid using js -->
-          </div>
-          <!-- ./potions tab -->
-
-          <!-- Ingredients Tab -->
-          <div class="tab-pane fade" id="inventory-ingredients" role="tabpanel" aria-labelledby="ingredients-tab"
-            tabindex="0">
-            <!-- ingredient grid using js -->
-          </div>
-          <!-- ./ingredients tab -->
-
-        </div>
+    <div class="row">
+      <!-- Inventory potions -->
+      <div id="inventory-potions-container" class="text-center col">
+        <ul id="inventory-potions" class="list-inline"></ul>
       </div>
-      <!-- ./potions and ingredients -->
-
-
+      <!-- ./inventory potions -->
     </div>
   </section>
 
@@ -189,38 +148,13 @@
     </div>
   </div>
 
-  <!-- Recipes Modal -->
-  <div class="modal fade" id="recipesModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="recipesLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title text-center w-100">Recipes</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <!-- potion recipes -->
-          <ul class="">
-            <li>
-              <h5>Potion Name</h5>
-              <p>Ingredients</p>
-              <p>Effect</p>
-            </li>
-            <li>
-              <h5>Potion Name</h5>
-              <p>Ingredients</p>
-              <p>Effect</p>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <!-- Bootstrap Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <!-- Main script JS -->
   <script defer src="assets/js/script.js"></script>
 
