--- a/game.html
+++ b/game.html
@@ -12,16 +12,16 @@
 
 <body class="d-flex flex-column vh-100">
 
-  <!-- Players -->
+  <!-- Characters -->
   <div class="row w-100 flex-grow-1" id="game-board">
 
-    <!-- Enemy Card -->
+    <!-- Villain Card -->
     <div class="col-4">
       <div class="card h-100 d-flex flex-column justify-content-center align-items-center">
         <div class="card-header w-100 bg-transparent border-0">
-          <h5 class="card-title text-center">Enemy-Name</h5>
-          <!-- Enemy Stats -->
-          <div class="row px-2 pt-3 pb-4 enemy-stats-section">
+          <h5 class="card-title text-center">Villain Name</h5>
+          <!-- Villain Stats -->
+          <div class="row px-2 pt-3 pb-4 villain-stats-section">
             <div class="col">
               <div class="progress">
                 <div id="player-hp" class="progress-bar bg-warning" role="progressbar" aria-valuenow="85"
@@ -30,39 +30,41 @@
                 </div>
               </div>
               <div class="progress">
-                <div id="enemy-strength" class="progress-bar bg-danger" role="progressbar" aria-valuenow="50"
+                <div id="villain-strength" class="progress-bar bg-danger" role="progressbar" aria-valuenow="50"
                   aria-valuemin="0" aria-valuemax="100" style="width: 50%">
                   <span class="text-left pl-2 progress-item">Strength</span>
                 </div>
               </div>
               <div class="progress">
-                <div id="enemy-agility" class="progress-bar bg-success" role="progressbar" aria-valuenow="80"
+                <div id="villain-agility" class="progress-bar bg-success" role="progressbar" aria-valuenow="80"
                   aria-valuemin="0" aria-valuemax="100" style="width: 80%">
                   <span class="text-left pl-2 progress-item">Agility</span>
                 </div>
               </div>
               <div class="progress">
-                <div id="enemy-dexterity" class="progress-bar bg-info" role="progressbar" aria-valuenow="65"
+                <div id="villain-dexterity" class="progress-bar bg-info" role="progressbar" aria-valuenow="65"
                   aria-valuemin="0" aria-valuemax="100" style="width: 65%">
                   <span class="text-left pl-2 progress-item">Dexterity</span>
                 </div>
               </div>
             </div>
           </div>
-          <!-- ./enemy stats -->
+          <!-- ./villain stats -->
         </div>
         <div class="card-body">
-          <img src="assets/images/enemies/Tiny_Vampire-removebg-preview.png" class="card-img-bottom" alt="tiny-vampire">
+          <div class="villain">
+            <img src="assets/images/villains/Tiny_Vampire-removebg-preview.png" class="card-img-bottom" alt="tiny-vampire">
+          </div>
         </div>
       </div>
     </div>
-    <!-- ./enemy card -->
+    <!-- ./villain card -->
 
     <!-- Player Card -->
     <div class="col-4">
       <div class="card h-100 d-flex flex-column justify-content-center align-items-center">
         <div class="card-header w-100 bg-transparent border-0">
-          <h5 class="card-title text-center">Player-Name</h5>
+          <h5 class="card-title text-center">Player Name</h5>
           <!-- Player Stats -->
           <div class="row px-2 pt-3 pb-4 player-stats-section">
             <div class="col">
@@ -104,6 +106,7 @@
     <!-- ./player card -->
 
   </div>
+  <!-- ./characters -->
 
   <!-- Inventory -->
   <div id="inventory-potions-container" class="row w-100 mt-auto">
