--- a/index.html
+++ b/index.html
@@ -20,13 +20,82 @@
         <h1 class="white-color-text main-heading">Witches Brew</h1>
         <div class="d-flex justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-around box">
-                <a class="btn btn-custom-orange button-custom" href="game.html">Start Game</a>
+                <!-- Button trigger modal -->
+                <button class="btn btn-custom-orange button-custom"
+                    data-bs-toggle="modal" data-bs-target="#playerSelect">
+                    Start Game
+                </button>
                 <a class="btn btn-custom-orange button-custom" href="kitchen.html">Witches Kitchen</a>
                 <a class="btn btn-custom-orange button-custom" href="rules.html">How to Play</a>
                 <a class="btn btn-custom-orange button-custom" href="creators.html">The Creators</a>
             </div>
         </div>
     </section>
+
+    <!-- Modal -->
+    <div class="modal fade" id="playerSelect" data-bs-backdrop="static"
+        data-bs-keyboard="false" tabindex="-1" aria-labelledby="playerSelectLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">Choose your Character</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="assets/images/player/Whitch-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Whitch-1</h5>
+                          <p>Whitch description</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/images/player/Whitch-2.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Whitch-2</h5>
+                          <p>Whitch description</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/images/player/Whitch-3.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Whitch-3</h5>
+                          <p>Whitch description</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/images/player/Whitch-4.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Whitch-4</h5>
+                          <p>Whitch description</p>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+            <div class="modal-footer d-flex justify-content-center border-0">
+                <button type="button" class="btn btn-custom-orange button-custom">Confirm</button>
+            </div>
+        </div>
+        </div>
+    </div>
+
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
