--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
                     </div>
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
+                      <div class="carousel-item active" data-character-id="1" data-character-name="Whitch-1">
                         <img src="assets/images/player/Whitch-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Whitch-1</h5>
                           <p>Whitch description</p>
                         </div>
                       </div>
-                      <div class="carousel-item">
+                      <div class="carousel-item" data-character-id="2" data-character-name="Whitch-2">
                         <img src="assets/images/player/Whitch-2.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Whitch-2</h5>
                           <p>Whitch description</p>
                         </div>
                       </div>
-                      <div class="carousel-item">
+                      <div class="carousel-item" data-character-id="3" data-character-name="Whitch-3">
                         <img src="assets/images/player/Whitch-3.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Whitch-3</h5>
                           <p>Whitch description</p>
                         </div>
                       </div>
-                      <div class="carousel-item">
+                      <div class="carousel-item" data-character-id="4" data-character-name="Whitch-4">
                         <img src="assets/images/player/Whitch-4.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Whitch-4</h5>
@@ -90,7 +90,7 @@
                   </div>
             </div>
             <div class="modal-footer d-flex justify-content-center border-0">
-                <button type="button" class="btn btn-custom-orange button-custom">Confirm</button>
+                <button id="select-player-btn" type="button" class="btn btn-custom-orange button-custom">Confirm</button>
             </div>
         </div>
         </div>
@@ -102,6 +102,8 @@
     </script>
     <!-- Fontawesome Script -->
     <script src="https://kit.fontawesome.com/4e8d2c2bb0.js" crossorigin="anonymous"></script>
+    <!-- Select Player Script -->
+    <script defer src="assets/js/select_player.js"></script>
 </body>
 
 </html>
