--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active" data-character-id="1" data-character-name="Whitch-1">
-                        <img src="assets/images/player/Whitch-1.png" class="d-block w-100" alt="...">
+                        <img src="assets/images/player/1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Whitch-1</h5>
                           <p>Whitch description</p>
                         </div>
                       </div>
                       <div class="carousel-item" data-character-id="2" data-character-name="Whitch-2">
-                        <img src="assets/images/player/Whitch-2.png" class="d-block w-100" alt="...">
+                        <img src="assets/images/player/2.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Whitch-2</h5>
                           <p>Whitch description</p>
                         </div>
                       </div>
                       <div class="carousel-item" data-character-id="3" data-character-name="Whitch-3">
-                        <img src="assets/images/player/Whitch-3.png" class="d-block w-100" alt="...">
+                        <img src="assets/images/player/3.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Whitch-3</h5>
                           <p>Whitch description</p>
                         </div>
                       </div>
                       <div class="carousel-item" data-character-id="4" data-character-name="Whitch-4">
-                        <img src="assets/images/player/Whitch-4.png" class="d-block w-100" alt="...">
+                        <img src="assets/images/player/4.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Whitch-4</h5>
                           <p>Whitch description</p>
